--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.1.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.2"
   }
