--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   "homepage": "https://github.com/WilsonJhub/301-final-back-end#readme",
   "dependencies": {
     "@auth0/auth0-react": "^1.10.1",
+    "auth0-js": "^9.19.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dependencies": "0.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.1.0",
     "mongodb": "^4.5.0",
-    "mongoose": "^6.3.2"
+    "mongoose": "^6.3.2",
+    "peer": "^0.6.1"
   }
 }
