--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwks-rsa": "^2.1.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.2",
-    "peer": "^0.6.1"
+    "peer": "^0.6.1",
+    "seed": "^0.4.4"
   }
 }
